# ChangeLog for app-arch/tar
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.140 2009/03/05 08:09:44 vapier Exp $

*tar-1.22 (05 Mar 2009)

  05 Mar 2009; Mike Frysinger <vapier@gentoo.org> +tar-1.22.ebuild:
  Version bump.

  02 Feb 2009; Ryan Hill <dirtyepic@gentoo.org>
  +files/tar-1.21-testsuite.patch, tar-1.21-r1.ebuild:
  Add patch from upstream to fix testsuite failures. (bug #253122)

*tar-1.21-r1 (29 Dec 2008)

  29 Dec 2008; Mike Frysinger <vapier@gentoo.org>
  +files/tar-1.21-revert-pipe.patch, +tar-1.21-r1.ebuild:
  Revert an upstream change that breaks when piping data into tar as pointed
  out by Zac Medico #252680 by Etienne Hilson.

*tar-1.21 (27 Dec 2008)

  27 Dec 2008; Mike Frysinger <vapier@gentoo.org> +tar-1.21.ebuild:
  Version bump.

  27 Nov 2008; Jeroen Roovers <jer@gentoo.org> tar-1.20.ebuild:
  Stable for HPPA (bug #249118).

  16 Jun 2008; Joseph Jezak <josejx@gentoo.org> tar-1.20.ebuild:
  Marked ppc/ppc64 stable.

  02 Jun 2008; Santiago M. Mola <coldwind@gentoo.org> tar-1.20.ebuild:
  amd64 stable

  21 May 2008; Raúl Porcel <armin76@gentoo.org> tar-1.20.ebuild:
  alpha/ia64/sparc/x86 stable

*tar-1.20 (14 Apr 2008)

  14 Apr 2008; Mike Frysinger <vapier@gentoo.org> +tar-1.20.ebuild:
  Version bump.

  27 Feb 2008; Santiago M. Mola <coldwind@gentoo.org> tar-1.19-r1.ebuild:
  amd64 stable wrt bug #211101

  22 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org> tar-1.19-r1.ebuild:
  ppc stable, bug #211101

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> tar-1.19-r1.ebuild:
  Stable on ppc64

  17 Jan 2008; Jeroen Roovers <jer@gentoo.org> tar-1.19-r1.ebuild:
  Stable for HPPA too.

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> tar-1.19-r1.ebuild:
  alpha/ia64/sparc/x86 stable

  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> tar-1.19.ebuild:
  ppc. stable

*tar-1.19-r1 (10 Dec 2007)

  10 Dec 2007; Mike Frysinger <vapier@gentoo.org>