@@ -1,6 +1,14 @@
 # ChangeLog for app-arch/tar
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.140 2009/03/05 08:09:44 vapier Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/tar/ChangeLog,v 1.142 2010/03/10 13:55:50 vapier Exp $
+
+*tar-1.23 (10 Mar 2010)
+
+  10 Mar 2010; Mike Frysinger <vapier@gentoo.org> +tar-1.23.ebuild:
+  Version bump.
+
+  10 Mar 2010; Mike Frysinger <vapier@gentoo.org> files/tar.1:
+  Updates from Benno Schulenberg for tar(1) man page #177678.
 
 *tar-1.22 (05 Mar 2009)
 
